--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700&family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
 
     <link rel="manifest" href="manifest.json">
-    <meta name="theme-color" content="#1e40af">
+<meta name="theme-color" content="#1e40af">
 
-    <link rel="icon" href="favicon.ico">
-<link rel="apple-touch-icon" href="icons/icon-192.png">
+<link rel="icon" href="icon-192.png">
+<link rel="apple-touch-icon" href="icon-192.png">
+
 
 
 </head>
@@ -1349,17 +1350,18 @@ async function toggleApprove(studentDocId, currentApproved) {
 
 
         <script>
-            if ("serviceWorker" in navigator) {
-                navigator.serviceWorker.register("./js/sw.js")
+  if ("serviceWorker" in navigator) {
+    navigator.serviceWorker.register("./sw.js")
+      .then(() => console.log("Service Worker Registered"))
+      .catch(err => console.log("SW registration failed:", err));
+  }
+</script>
 
-                    .then(() => console.log("Service Worker Registered"))
-                    .catch(err => console.log("SW registration failed:", err));
-            }
-        </script>
 
 
 </body>
 </html>
+
 
 
 
