--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
         <button id="installBtn" class="install-btn hidden">
             📲 تثبيت التطبيق
         </button>
-
-
+    </div>
+        
         <!-- 🧑‍🎓 رسالة ترحيب رسمية -->
         <section class="welcome-message" id="welcomeMessage">
 
@@ -1361,6 +1361,7 @@ async function toggleApprove(studentDocId, currentApproved) {
 
 </body>
 </html>
+
 
 
 
