--- a/index.html
+++ b/index.html
@@ -343,79 +343,57 @@
             // }
 
          // تسجيل الدخول (Admin + Student)
-// تسجيل الدخول (Admin + Supervisor + Student)
+<script>
 async function login() {
-    const email = document.getElementById("email").value.trim().toLowerCase();
-    const password = document.getElementById("password").value.trim();
+  const email = document.getElementById("email").value.trim().toLowerCase();
+  const password = document.getElementById("password").value.trim();
 
-    if (!email || !password) {
-        alert("من فضلك أدخل البريد وكلمة المرور");
+  if (!email || !password) {
+    alert("من فضلك أدخل البريد وكلمة المرور");
+    return;
+  }
+
+  if (!window.firestoreTools || !window.firestoreTools.db) {
+    alert("Firebase لم يتم تحميله بعد");
+    console.log("firestoreTools:", window.firestoreTools);
+    return;
+  }
+
+  const db = window.firestoreTools.db;
+
+  try {
+    console.log("=== LOGIN START ===");
+    console.log("Email:", email);
+
+    // ✅ Admin doc
+    const adminRef = db.doc("admins/admin");
+    const adminSnap = await adminRef.get();
+
+    console.log("adminSnap.exists:", adminSnap.exists);
+
+    if (adminSnap.exists) {
+      const adminData = adminSnap.data();
+      console.log("adminData:", adminData);
+
+      const dbEmail = (adminData.email || "").toLowerCase();
+      const dbPass = adminData.password || "";
+
+      if (dbEmail === email && dbPass === password) {
+        alert("تم تسجيل الدخول كأدمن ✅");
+        window.location.href = "./admin.html";
         return;
+      }
     }
 
-    try {
-        const { collection, getDocs, query, where } = window.firestoreTools;
+    alert("بيانات الدخول غير صحيحة ❌");
 
-        // =========================
-        // 1) البحث داخل admins أولاً
-        // =========================
-        const adminQuery = query(
-            collection(window.db, "admins"),
-            where("email", "==", email)
-        );
-
-        const adminSnap = await getDocs(adminQuery);
-
-        if (!adminSnap.empty) {
-            const adminDoc = adminSnap.docs[0];
-            const admin = adminDoc.data();
-
-            if (admin.password !== password) {
-                alert("كلمة المرور غير صحيحة ❌");
-                return;
-            }
-
-            currentUser = { ...admin, id: adminDoc.id, role: "ADMIN" };
-
-            document.getElementById("loginPage").classList.add("hidden");
-            document.getElementById("mainPage").classList.remove("hidden");
-            document.querySelector(".logout-btn").classList.remove("hidden");
-
-            document.getElementById("welcomeMessage").classList.add("hidden");
-            document.getElementById("navUser").textContent = " | " + admin.email;
-
-            document.getElementById("adminPanel").classList.remove("hidden");
-
-            renderGrades();
-            return;
-        }
-
-        // =========================
-        // 2) لو مش أدمن → نبحث داخل users عن SUPERVISOR
-        // =========================
-        const supervisorQuery = query(
-            collection(window.db, "users"),
-            where("email", "==", email)
-        );
-
-        const supervisorSnap = await getDocs(supervisorQuery);
-
-        if (!supervisorSnap.empty) {
-            const supDoc = supervisorSnap.docs[0];
-            const sup = supDoc.data();
-
-            // مهم: نتأكد أنه فعلاً مشرف
-           const role = (sup.role || "SUPERVISOR").toUpperCase();
-if (role !== "SUPERVISOR") {
-   alert("هذا الحساب ليس مشرف ❌");
-   return;
+  } catch (err) {
+    console.error("LOGIN ERROR FULL:", err);
+    alert("حدث خطأ أثناء تسجيل الدخول ❌\n" + (err.message || err));
+  }
 }
+</script>
 
-
-            if (sup.password !== password) {
-                alert("كلمة المرور غير صحيحة ❌");
-                return;
-            }
 
             currentUser = { ...sup, id: supDoc.id, role: "SUPERVISOR" };
 
@@ -1402,6 +1380,7 @@ async function toggleApprove(studentDocId, currentApproved) {
 
 </body>
 </html>
+
 
 
 
