--- a/index.html
+++ b/index.html
@@ -718,7 +718,7 @@ async function login() {
   width="100%"
   style="max-height: 220px; border-radius: 12px;"
 >
-  <source src="./videos/Lesson1.mp4.mp4" type="video/mp4">
+  <source src="./videos/lesson1.mp4" type="video/mp4">
   المتصفح لا يدعم تشغيل الفيديو
 </video>
 
@@ -1381,6 +1381,7 @@ async function toggleApprove(studentDocId, currentApproved) {
 
 </body>
 </html>
+
 
 
 
