--- a/index.html
+++ b/index.html
@@ -710,7 +710,7 @@ async function login() {
                 const textDiv = document.getElementById("lessonText");
 
                 videoDiv.innerHTML = `
-                                                                                                                                                              <video
+   <video
   id="lessonPlayer"
   controls
   autoplay
@@ -718,9 +718,10 @@ async function login() {
   width="100%"
   style="max-height: 220px; border-radius: 12px;"
 >
-  <source src="./videos/lesson1.mp4" type="video/mp4">
+  <source src="./videos/Lesson1.mp4.mp4" type="video/mp4">
   المتصفح لا يدعم تشغيل الفيديو
 </video>
+
 
                                                                                                                                                                                                                                                   `;
 
@@ -1381,6 +1382,7 @@ async function toggleApprove(studentDocId, currentApproved) {
 
 </body>
 </html>
+
 
 
 
