--- a/index.html
+++ b/index.html
@@ -1392,7 +1392,7 @@ async function toggleApprove(studentDocId, currentApproved) {
       .then(() => console.log("Service Worker Registered"))
       .catch(err => console.log("SW registration failed:", err));
   }
-    window.login = loginUser;
+    // window.login = loginUser;
 
 </script>
 
@@ -1402,6 +1402,7 @@ async function toggleApprove(studentDocId, currentApproved) {
 
 </body>
 </html>
+
 
 
 
