Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -69,13 +69,14 @@
             <input id="password" type="password" placeholder="كلمة المرور">
 
             <!-- الأزرار داخل صفحة الدخول -->
-            <div class="auth-buttons">
-                <button id="loginBtn">تسجيل الدخول</button>
+<div class="auth-buttons">
+    <button id="loginBtn" onclick="login()">تسجيل الدخول</button>
 
-                <button class="register-btn secondary" onclick="registerStudentPage()">
-                    تسجيل حساب جديد
-                </button>
-            </div>
+    <button class="register-btn secondary" onclick="registerStudentPage()">
+        تسجيل حساب جديد
+    </button>
+</div>
+
 
         </div>
 
@@ -1388,6 +1389,7 @@ async function toggleApprove(studentDocId, currentApproved) {
 
 </body>
 </html>
+
 
 
 
