--- a/admin.html
+++ b/admin.html
@@ -17,14 +17,18 @@
   <h1>مرحباً بك في لوحة الأدمن ✅</h1>
   <p>تم تسجيل الدخول بنجاح.</p>
 
-  <button onclick="logoutAdmin()">تسجيل خروج</button>
+ <button onclick="logoutAdmin()">تسجيل خروج</button>
 
-  <script>
-    function logoutAdmin() {
-      localStorage.removeItem("isAdmin"); // ✅ حذف صلاحية الأدمن
-      location.href = "./index.html";
-    }
-  </script>
+<script>
+  function logoutAdmin() {
+    // ✅ حذف صلاحية الأدمن حتى لا يظل يفتح admin.html تلقائياً
+    localStorage.removeItem("isAdmin");
+
+    // رجوع لصفحة تسجيل الدخول
+    window.location.href = "./index.html";
+  }
+</script>
+
 
 </body>
 </html>
